fixed spacing issue from help message (#238)
* fixed spacing issue from help message

* fixed sizing issue on tutorial screen

--- a/deploy/web/gameapp/src/pages/GamePage/ChatDisplay/ChatMessages/styles.css
+++ b/deploy/web/gameapp/src/pages/GamePage/ChatDisplay/ChatMessages/styles.css
@@ -16,11 +16,21 @@
   /* font-size: 16px; */
 }
 
+#message-nameplate {
+  font-family: fantasy;
+  font-size: 1em;
+  margin-right: 50px;
+  max-width: 80%;
+  overflow-x: hidden;
+}
+
 .message.me {
+  display: block;
   float: left;
 }
 
 .message.other {
+  display: block;
   float: right;
 }
 
@@ -262,6 +272,7 @@
   height: 48em;
   width: 100%;
   z-index: 1;
+  margin-bottom: 6em;
 }
 
 .help-question__container {
@@ -273,8 +284,9 @@
 .help-question {
   position: absolute;
   z-index: 1;
-  left: 10%;
+  left: 5%;
   top: 10%;
+  font-size: 39em;
 }
 
 .help-content {
@@ -378,7 +390,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 20em;
+  height: 25em;
   z-index: 1;
 }
 
@@ -401,7 +413,7 @@
   padding-top: 2.5em;
   margin: 0;
   width: 100%;
-  height: 16em;
+  height: 19em;
   border-color: red;
   border-width: 0.2em;
   border-style: solid;
@@ -489,9 +501,16 @@
   .message .agent {
     font-size: 8px;
   }
+  #message-nameplate {
+    font-family: fantasy;
+    font-size: 1em;
+    margin-right: 50px;
+    max-width: 80%;
+    overflow-x: hidden;
+  }
   /* SETTING MESSAGE */
   .message.type-setting {
-    width: 90%;
+    display: block;
     margin: auto 0 auto 0;
     font-size: 11px;
     text-align: center;
@@ -530,6 +549,9 @@
   /* STATUS MESSSAGE */
   .status-content {
     width: 98%;
+    display: flex;
+    flex-direction: column;
+
     overflow-x: hidden;
   }
 
@@ -564,5 +586,74 @@
 
   .soulspawn-subheader {
     font-size: 11px;
+  }
+
+  /* HELP MESSAGE*/
+  .help-container {
+    display: flex;
+    justify-content: center;
+    height: 35em;
+    width: 100%;
+    z-index: 1;
+    margin-bottom: 6em;
+  }
+
+  .help-question__container {
+    width: 100%;
+  }
+
+  .help-question {
+    position: absolute;
+    z-index: 1;
+    left: 0%;
+    top: 10%;
+    font-size: 19em;
+  }
+
+  .help-content {
+    color: black;
+    z-index: 10;
+    text-align: center;
+    position: absolute;
+    font-family: fantasy;
+    font-weight: bolder;
+    width: 98%;
+    background-color: #0072ff;
+    border-color: #0072ff;
+    border-style: solid;
+    border-width: 0.2em;
+    opacity: 0.8;
+    border-radius: 15px;
+    overflow-y: hidden;
+    box-shadow: 4px 4px 6px black;
+  }
+  .help-content__header {
+    color: black;
+    z-index: 6;
+    text-align: center;
+    font-size: 14px;
+    background-color: #0072ff;
+    width: 100%;
+    z-index: 6;
+    color: white;
+    font-weight: bolder;
+    margin: 0;
+  }
+
+  .help-content__entries {
+    background-color: white;
+    z-index: 7;
+    height: 100%;
+    width: 100%;
+    padding-top: 2px;
+    overflow-y: scroll;
+  }
+
+  .help-content__entry {
+    color: black;
+    z-index: 6;
+    text-align: center;
+    font-size: 10px;
+    font-weight: bolder;
   }
 }
