--- a/deploy/web/gameapp/src/components/ToggleSwitch/styles.css
+++ b/deploy/web/gameapp/src/components/ToggleSwitch/styles.css
@@ -8,6 +8,7 @@
   font-family: fantasy;
   font-weight: bold;
   color: white;
+  font-size: 12px;
   margin-right: 10px;
 }
 .toggle-switch {
