--- a/deploy/web/landingapp/src/pages/TutorialPage/styles.css
+++ b/deploy/web/landingapp/src/pages/TutorialPage/styles.css
@@ -14,13 +14,11 @@
   overflow-y: scroll;
   overflow-x: hidden;
   width: 80%;
-  height: 80%;
-  margin: 3em;
+  height: 100%;
   border-style: ridge;
   border-color: darkgrey;
   background-color: rgba(255, 255, 255, 0.95);
   border-width: 1em;
-  padding: 2em;
 }
 
 .tutorialpage-button {
